--- a/frontend/project_react/public/index.html
+++ b/frontend/project_react/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=https://dapi.kakao.com/v2/maps/sdk.js?appkey=df2953604b7379746cd108320967cf69&autoload=false"></script>
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=https://dapi.kakao.com/v2/maps/sdk.js?appkey=df2953604b7379746cd108320967cf69&autoload=false"></script> -->
     <title>React App</title>
   </head>
   <body>
